[workspace]
members = [
    "crates/use-ecology",
    "crates/use-ecosystem",
    "crates/use-habitat",
    "crates/use-population",
    "crates/use-community",
    "crates/use-niche",
    "crates/use-biome",
    "crates/use-food-web",
    "crates/use-species-interaction",
    "crates/use-trophic-level",
    "crates/use-biodiversity",
    "crates/use-conservation-status",
]
resolver = "3"

[workspace.package]
authors = ["RustUse Contributors"]
edition = "2024"
homepage = "https://rustuse.org"
license = "MIT OR Apache-2.0"
publish = false
readme = "README.md"
repository = "https://github.com/RustUse/use-ecology"
rust-version = "1.95.0"
version = "0.1.0"

[workspace.dependencies]
use-biodiversity = { version = "0.1.0", path = "crates/use-biodiversity" }
use-biome = { version = "0.1.0", path = "crates/use-biome" }
use-community = { version = "0.1.0", path = "crates/use-community" }
use-conservation-status = { version = "0.1.0", path = "crates/use-conservation-status" }
use-ecology = { version = "0.1.0", path = "crates/use-ecology" }
use-ecosystem = { version = "0.1.0", path = "crates/use-ecosystem" }
use-food-web = { version = "0.1.0", path = "crates/use-food-web" }
use-habitat = { version = "0.1.0", path = "crates/use-habitat" }
use-niche = { version = "0.1.0", path = "crates/use-niche" }
use-population = { version = "0.1.0", path = "crates/use-population" }
use-species-interaction = { version = "0.1.0", path = "crates/use-species-interaction" }
use-trophic-level = { version = "0.1.0", path = "crates/use-trophic-level" }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.metadata.rustuse.release]
publish = false
versioning = "lockstep-0.x"
first-publish-candidates = [
    "use-ecosystem",
    "use-habitat",
    "use-population",
    "use-community",
    "use-niche",
    "use-biome",
    "use-food-web",
    "use-species-interaction",
    "use-trophic-level",
    "use-biodiversity",
    "use-conservation-status",
    "use-ecology",
]
