[package]
name = "use-ecology"
description = "Facade crate for primitive RustUse ecology vocabulary"
publish = true
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/use-ecology"
keywords = ["ecology", "vocabulary", "ecosystem", "habitat", "rustuse"]
categories = ["data-structures", "science"]

[dependencies]
use-biodiversity.workspace = true
use-biome.workspace = true
use-community.workspace = true
use-conservation-status.workspace = true
use-ecosystem.workspace = true
use-food-web.workspace = true
use-habitat.workspace = true
use-niche.workspace = true
use-population.workspace = true
use-species-interaction.workspace = true
use-trophic-level.workspace = true

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true
